# neural-network-c

./: CMakeLists.txt  LICENSE.md  README.md
great_old_headers/: eldritch_arrays.h  neural_network.h
matrices/: features.mat  targets.mat
matrices/iris/: iris_data.mat  iris_data_shuffled.mat  iris_features.mat  iris_targets.mat
matrices/iris/test/: features_test.mat  targets_test.mat
matrices/iris/train/: features_train.mat  targets_train.mat
src/: iris.c  main.c  multilayer_xor.c  xor.c
